# voidtorrent

./: .gitignore  README.md  launcher.py  pyproject.toml
docs/: index.html
docs/assets/css/: styles.css
docs/assets/js/: site.js
docs/download/: index.html
docs/how-to/: index.html
src/voidtorrent/: __init__.py  __main__.py  config.py  engine.py  theme.py  utils.py
src/voidtorrent/ui/: __init__.py  add_dialog.py  main_window.py  options_dialog.py
